--- a/changelog/_unreleased/2022-05-29-fix-typos.md
+++ b/changelog/_unreleased/2022-05-29-fix-typos.md
@@ -1,5 +1,6 @@
 ---
 title: Fix typos in DocumentGeneratorController
+issue: NEXT-21800
 author: Lisa Meister
 author_email: lisa.meister.93@gmx.de
 ---
