update documentation about range numeric types

--- a/src/Docs/Resources/current/60-references-internals/10-core/130-dal.md
+++ b/src/Docs/Resources/current/60-references-internals/10-core/130-dal.md
@@ -1080,7 +1080,7 @@ This interval groups the result and calculates the corresponding count of hits.
 </div>
 
 ### Range aggregation
-The range aggregation is used if you want to count the results over predefined ranges.
+The range aggregation is used if you want to count the results over predefined ranges of numeric values.
 
 The "from" range parameter will be compared with greater than or equal.
 The "to" range parameter will be compared with lower than.
