Update changelog file

--- a/changelog/_unreleased/2022-10-28-fix-issue-with-2664.md
+++ b/changelog/_unreleased/2022-10-28-fix-issue-with-2664.md
@@ -6,4 +6,4 @@ author_email: me@alessandroaussems.be
 author_github: @alessandroaussems
 ---
 # Storefront
-* clone $context in LoginRoute.php to update customer with current language
+* Grab languageId from $context in LoginRoute.php to update customer with current language
